--- a/TelaPrincipal/style.css
+++ b/TelaPrincipal/style.css
@@ -28,3 +28,29 @@
     font-size: 30px;
     color: black;
 }
+
+  
+  .image-container {
+    width: 100%;
+    height: 0;
+    padding-bottom: 75%; 
+    position: relative;
+    overflow: hidden;
+  }
+  
+  
+  body {
+    background-image: url("../imagens/fundotop1.png");
+    background-repeat: repeat;
+    background-size: cover;
+}
+.card.custom-bg-color {
+  position: sticky;
+  top: 0;
+  z-index: 999;
+}
+.card-img-top {
+  width: 100%;
+  height: 200px; 
+  object-fit: cover;
+}
